<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPricision"
    tools:context=".Ins_stud">
        <EditText
            android:id="@+id/ins_stud_edit_fnm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_fnm"
            android:padding="12dp"
            android:textSize="30dp"
            android:maxLength="10"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ins_stud_edit_fnm"
            android:id="@+id/ins_stud_edit_lnm"
            android:hint="@string/app_lnm"
            android:padding="12dp"
            android:maxLength="15"
            android:textSize="30dp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ins_stud_txtCn"
            android:layout_below="@id/ins_stud_edit_lnm"
            android:text="+91"
            android:padding="12dp"
            android:textSize="30dp"
            android:textColor="@color/colorWhite"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="30dp"
            android:hint="@string/app_contNo"
            android:maxLength="10"
            android:id="@+id/ins_stud_edit_Cn"
            android:layout_toRightOf="@id/ins_stud_txtCn"
            android:layout_below="@id/ins_stud_edit_lnm"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:inputType="number"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ins_stud_edit_Cn"
            android:hint="@string/app_add"
            android:padding="12dp"
            android:textSize="25dp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:id="@+id/ins_stud_edit_add"
            android:lines="3"/>
        <Spinner
            android:id="@+id/ins_stud_spn_str"
            android:padding="10dp"
            android:layout_width="120dp"
            android:layout_marginEnd="12dp"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:autofillHints="Select Stream"
            android:background="@color/orangeLight"
            android:prompt="@color/colorAccent"
            android:entries="@array/array_stream"
            android:layout_marginStart="12dp"
            android:layout_below="@id/ins_stud_edit_add"/>
    <Spinner
        android:id="@+id/ins_stud_spn_sem"
        android:layout_below="@id/ins_stud_edit_add"
        android:padding="10dp"
        android:layout_width="120dp"
        android:layout_marginEnd="12dp"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@id/ins_stud_spn_str"
        android:autofillHints="Select Stream"
        android:background="@color/orangeLight"
        android:prompt="@color/colorAccent"
        android:layout_marginStart="12dp" />
            <LinearLayout
                android:padding="12dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ins_stud_spn_str">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_Add"
                    android:backgroundTint="@color/turquoiseBlue"
                    android:textSize="30dp"
                    android:onClick="insData"
                    android:layout_marginRight="12dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_clear"
                    android:backgroundTint="@color/turquoiseBlue"
                    android:onClick="CLear"
                    android:textSize="30dp"/>
            </LinearLayout>
</RelativeLayout>